@@ -1,12 +1,13 @@
 package com.marciopd.recipesapi.configuration.security.token.impl;
 
 import com.marciopd.recipesapi.configuration.security.token.AccessToken;
+import lombok.EqualsAndHashCode;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+@EqualsAndHashCode
 public class AccessTokenImpl implements AccessToken {
     private final Long userId;
     private final String subject;
@@ -15,9 +16,7 @@ public class AccessTokenImpl implements AccessToken {
     public AccessTokenImpl(Long userId, String subject, Collection<String> roles) {
         this.userId = userId;
         this.subject = subject;
-        this.roles = roles != null ?
-                Collections.unmodifiableSet(roles.stream().collect(Collectors.toSet()))
-                : Collections.emptySet();
+        this.roles = roles != null ? Set.copyOf(roles) : Collections.emptySet();
     }
 
     @Override
